--- a/app/views/home/what_we_do.haml
+++ b/app/views/home/what_we_do.haml
@@ -10,7 +10,5 @@
       = link_to offer_btn, new_seller_listing_path
     
   %div#videoC
-    = image_tag '/images/what_we_do/video_placeholder.png'
-
-    
+    = render :partial => 'how_it_works_video'
   
