--- a/app/views/shared/_quotes_row.haml
+++ b/app/views/shared/_quotes_row.haml
@@ -1,5 +1,5 @@
-%div.quotes_rowC.clearfix
-  %div
+%div.quotes_rowC.yui3-u-g
+  %div.yui3-u-1-2
     = image_tag '/images/transparent.gif', :id => 'unlike_others', :alt => 'Unlike Other Real Estate Investors...'
     %p
       The experienced home buyers at eHouseOffers meet unparalleled financial and real estate qualifications. Their
@@ -8,7 +8,7 @@
     %p.author
       Cleveland M, Seattle WA
 
-  %div
+  %div.yui3-u-1-2
     = image_tag '/images/transparent.gif', :id => 'a_top_pick', :alt => 'A Top Pick to Sell Your House'
     %p
       It was exactly what we were looking for. We got a cash offer as well as a ton of information to help us if we
