Video tweaks: 1) changed videos (another with better dimensions for the space we are in) 2) reset the screen (js) 3) fix x-browser issue

--- a/app/views/home/_how_it_works_video.haml
+++ b/app/views/home/_how_it_works_video.haml
@@ -4,28 +4,45 @@
 #how_video_frame
   #how_preview &nbsp;
   #how_play_button_hover &nbsp;
+  #screen
 
 :javascript
   $(document).ready(function() {
     var hover_btn = $('#how_play_button_hover');
-    $('#how_video_frame')
-    .mouseover(function(){hover_btn.css('display','block')})
-    .mouseout(function(){hover_btn.css('display','none')})
-    .click(function(){
-      hover_btn.css('display','none');
-      $(this).unbind();
-      jwplayer("how_preview").setup({
-        flashplayer : "/videos/player/player.swf",
-        file        : "/videos/how_it_works.flv",
-        height      : "300",
-        width       : 395,
-        autostart   : true,
-        plugins     : 'hd-1',
-        'hd.file'   : "/videos/how_it_works.flv",
-        'hd.state'  : true,
-        events      : {
-          onVolume: function(event) {}
+    var preview = $('#how_preview');
+    videobind();
+
+    function videobind() {
+      $('#how_video_frame')
+      .mouseover(function(){hover_btn.css('display','block')})
+      .mouseout(function(){hover_btn.css('display','none')})
+      .click(function(){
+        hover_btn.css('display','none');
+        preview.css('display','none');
+        $(this).unbind();
+
+        var movie = $('object#screen');
+        if ( $.data(movie,'played') ) {
+          movie.css('zIndex','99');
+          preview.css('display','none');
+          jwplayer('screen').play();
+        } else {
+          $.data(movie,'played',true);
+          jwplayer("screen").setup({
+            flashplayer : "/videos/player/player.swf",
+            file        : "/videos/how_it_works.flv",
+            width       : 398,
+            height      : 299,
+            autostart   : true,
+            events      : {
+              onComplete : function(){
+                $('object#screen').css({zIndex:-1});
+                preview.css('display','block');
+                videobind();
+              }
+            }
+          });
         }
-      }).setFullscreen(true);
-    })
+      });
+    }
   });
