--- a/app/views/home/home.haml
+++ b/app/views/home/home.haml
@@ -5,8 +5,8 @@
   extra_css('home')
 
 %div#homeC.yui3-g
-  %div.yui3-u-1-24 &nbsp;
-  %div#welcome_messageC.yui3-u-13-24
+  %div#hs_one.yui3-u-1-24 &nbsp;
+  %div#welcome_messageC.yui3-u-7-12
 
     = render :partial => 'how_it_works_video'
 
