Ticket #22: fixed embed code and padding for trends page

--- a/public/stylesheets/sass/_add_badge.scss
+++ b/public/stylesheets/sass/_add_badge.scss
@@ -19,7 +19,7 @@
 .add_badgeC textarea.copyC {
     width : 90%;
     height : 2.2em;
-    font-size : .8em;
+    font-size : 10px;
     overflow : hidden;
     color : $grey;
 }
