--- a/public/stylesheets/sass/_blog_show_page.scss
+++ b/public/stylesheets/sass/_blog_show_page.scss
@@ -1,5 +1,5 @@
 /* Blog Show Pages */
-#show_pageC h1.green { margin : 10px 0px 20px 0px; }
+#show_pageC h1.green { margin-top : 10px; }
 
 #show_pageC hr.massive {
     margin : 3em 0;
