--- a/public/stylesheets/sass/_share_this_image.scss
+++ b/public/stylesheets/sass/_share_this_image.scss
@@ -1,7 +1,7 @@
 textarea.copy_image_code {
     width : 255px;
     height : 2.2em;
-    font-size : .8em;
+    font-size : 10px;
     margin-bottom : 9px;
     overflow : hidden;
 }
