--- a/public/stylesheets/sass/trends.scss
+++ b/public/stylesheets/sass/trends.scss
@@ -11,6 +11,9 @@
 }
 hr#top_of_content.space { margin-top : -15px; }
 
+h1.green { margin-bottom : 20px; }
+
+
 @import "jquery.slider";
 @import "email_this_image";
 @import "share_article_on";
