--- a/app/views/seller_listings/_form.html.haml
+++ b/app/views/seller_listings/_form.html.haml
@@ -29,7 +29,7 @@
   = f.fields_for @seller_listing.user.addresses.new do |field|
     .field#address1
       = field.label :address1, 'Address'
-      = field.text_field :address1, 'data-validation' => 'validate(required)', 'data-example' => 'Address'
+      = field.text_field :address1, 'data-validation' => 'validate(required)', 'data-example' => 'Street Address'
 
     #city_stateC.hidden
       .field#city
