--- a/app/views/shared/_seller_signup.haml
+++ b/app/views/shared/_seller_signup.haml
@@ -3,7 +3,7 @@
     = image_tag '/images/transparent.gif', :id => 'get_offer_narrow', :class => 'sprite', :alt => 'Get a cash offer on your house today!'
 
     %p
-      Find a home buyer in 3 easy steps!
+      Find a local home buyer
 
     %span.shared_seller_signup
       = render :partial => 'seller_listings/form'
