--- a/app/views/home/home.haml
+++ b/app/views/home/home.haml
@@ -14,7 +14,7 @@
       %h1
         = image_tag '/images/transparent.gif', :id => 'welcome_title', :class => 'sprite', :alt => h1_title
       %p
-        At eHouseOffers you’ll find resources for home sellers, information on real estate trends & a community of
+        At eHouseOffers you'll find resources for home sellers, information on real estate trends & a community of
         professional home buyers.
 
   %div#cash_offer_formC.yui3-u-2-5
