Ticket 28: motivated sellers email and various email tweaks

--- a/app/views/mailer/_new_seller_confirmation.haml
+++ b/app/views/mailer/_new_seller_confirmation.haml
@@ -1,4 +1,4 @@
-= "Hi #{@seller_listing.user.first_name}"
+%h1= "Hi #{@seller_listing.user.first_name},"
 
 %p
   Thanks for choosing eHouseOffers. Your request for a home offer has been processed and a qualified local home buyer will contact you within 48 hours.
@@ -8,8 +8,3 @@
 
 %p
   We look forward to speaking with you,
-
-%p
-  Chris
-  %br
-  (&amp; the eHouseOffers Team)
