--- a/app/views/mailer/buyer_lead_notification.html.haml
+++ b/app/views/mailer/buyer_lead_notification.html.haml
@@ -1,2 +1,2 @@
-- body = render :partial => 'send_us_their_email'
+- body = render :partial => 'buyer_lead_notification'
 = render :partial => 'mailer/layouts/html_template', :locals => {:body => body}
