--- a/app/views/mailer/layouts/_html_template.haml
+++ b/app/views/mailer/layouts/_html_template.haml
@@ -1,3 +1,8 @@
+:ruby
+  closing = closing.nil? || closing.blank? ? nil : closing
+  from = from.nil? || from.blank? ? nil : from
+  from_byline = from_byline.nil? || from_byline.blank? ? nil : from_byline
+
 %html
   %head
     %title= "#{@title} :: eHouseOffers" || 'eHouseOffers.com'
@@ -7,10 +12,13 @@
       hr{background:#75973e;color:#75973e;clear:both;float:none;width:100%;height:.1em;margin:1em 0;border:none;}
       img{border:none;}
       a{color:#8eae5b;}
-      h1{color:#333;font-size:18px;margin:0 0 10px 0;}
+      h1{color:#333;font-size:16px;margin:0 0 8px 0;}
+      h2{color:#333;font-size:14px;margin:0 0 7px 0;}
       p{margin:0 0 10px 0;}
+      th{font-weight:bold;}
+      th,td{text-align:left;vertical-align:top}
 
-%body{:style => 'padding:0;margin:0;'}
+%body{:style => 'padding:10px 0 30px 0;margin:0;'}
   %center
     %div{:style => 'width:620px;text-align:left;margin:20px 0 0 0;'}
       - logo = image_tag("http://#{KEYS['host']}/images/email/ehouseoffers-logo.png", :alt => 'Professional Home Buyers: eHouseOffers.com')
@@ -19,10 +27,21 @@
       
       %p= body
 
-      %strong eHouseOffers
+      - if closing.present?
+        = closing
+        %br
+
+      - if from.present?
+        = from
+      - else
+        %strong eHouseOffers
       %br
-      %span{:style => 'font-size:12px;'}
-      = mailer_link(root_url(:protocol => 'https'), root_url(:protocol => 'https'))
+
+      %div{:style => 'font-size:12px;'}
+        - if from_byline.present?
+          = from_byline
+        - else
+          = mailer_link(root_url(:protocol => 'https'), root_url(:protocol => 'https'))
 
       %br
       1752 NW Market St. #520
