--- a/app/views/mailer/user_contact_confirmation.text.haml
+++ b/app/views/mailer/user_contact_confirmation.text.haml
@@ -2,4 +2,4 @@
 = ''
 We have received your email and will be responding as quickly as we can. Thank you for contacting us!
 = ''
-= render :partial => 'text_footer'
+= render :partial => 'mailer/layouts/text_footer'
