--- a/app/views/mailer/user_contact_confirmation.html.haml
+++ b/app/views/mailer/user_contact_confirmation.html.haml
@@ -1,2 +1,2 @@
 - body = render :partial => 'user_contact_confirmation', :locals => {:message => @message}
-= render :partial => 'html_email_template', :locals => {:body => body}
+= render :partial => 'mailer/layouts/html_template', :locals => {:body => body}
