1) moved construct_blog_path from application_controller to application_helper and just include it in the blogs controller (where we need it for render redirects) 2) added email image funcationlity for trends and reason to sell pages 3) tweaked jquery.ketchup's passed_validations to use $.data rather than just attaching it to the form element

--- a/app/views/shared/blogs/_email_this_image.haml
+++ b/app/views/shared/blogs/_email_this_image.haml
@@ -6,9 +6,7 @@
     = form_tag email_image_blog_path(blog.title_for_url), :method => :post, :class => 'email_image_form' do
       .field
         = label_tag 'your_email', 'Your Email'
-        -# Do not auto-populate. it could be confusing (email to who? Me? Why is my email address in there?)
-        -#= text_field_tag 'your_email', (user_signed_in? ? current_user.email : ''), 'data-validation' => 'validate(required, email)', 'data-example' => 'Your Email'
-        = text_field_tag 'your_email', '', 'data-validation' => 'validate(required, email)', 'data-example' => 'Your Email'
+        = text_field_tag 'your_email', (user_signed_in? ? current_user.email : ''), 'data-validation' => 'validate(required, email)', 'data-example' => 'Your Email'
 
       .field
         = label_tag 'friends_email', 'Friends Email'
@@ -17,4 +15,6 @@
       .submitC
         = image_submit_tag '/images/transparent.gif', :id => 'send_image_btn', :class => 'reasons_sprite'
 
+      .js_reportC &nbsp;
+        
 
