--- a/app/views/seller_listings/_homeoffer2.haml
+++ b/app/views/seller_listings/_homeoffer2.haml
@@ -1,4 +1,7 @@
-= form_for @seller_listing do |f|
+
+
+
+= form_for @seller_listing, :url => url_for_ssl(:seller_listing_url, @seller_listing.id) do |f|
   = render :partial => 'shared/user_notice', :locals => {:model_obj => @seller_listing}
 
   .field
