Updated about page content

--- a/app/views/home/_our_story.haml
+++ b/app/views/home/_our_story.haml
@@ -1,11 +1,20 @@
 %h1.green Our Story
 
 %p
-  In early 2007, our founder Chris Richter was introduced to a family friend who was on their way to foreclosure.
-  They didn't speak English, they didn't know how to get out from under their debt, & they needed help ... not an
-  investor who wanted to make a quick buck off of them. This was the point in time that Chris realized home
-  sellers needed better resources & more ethical home buyers.
-  
+  In early 2007, our founder, Chris Richter, was introduced to Garrett Young. Garrett and his family were on their way
+  to foreclosure.
+
 %p
-  From the experience of walking Garrett and his family through their options, and ultimately helping them
-  sell their house eHouseOffers was born.
+  The Young Family was behind on their payments and Garrett didn't know how to get out from under his debt. In short,
+  when Garrett called Chris he needed real help from a real local expert. He didn't need an investor looking to make a
+  quick buck at the expense of his family.
+
+%p
+  Chris helped The Young Family get the answers they needed and ultimately to close on the sale of their home, but it
+  was from the experience of walking Garrett through the home sale process that Chris realized home sellers, like The
+  Young Family, need better resources for connecting with qualified home buyers. And the idea for eHouseOffers was born.
+
+%p
+  Today, years later, with a community of home buyers around the country, eHouseOffers remains the best resource for
+  home sellers.
+
