moved the seller listing box (right col) up about 30px so the security icons would be above the fold (only on show pages)

--- a/app/views/spotlights/show.html.haml
+++ b/app/views/spotlights/show.html.haml
@@ -13,7 +13,7 @@
 
 = render "shared/breadcrumb", :crumbs => [[:home, root_path], [:spotlight, spotlights_path], [@spotlight.title, nil]]
 
-%div#spotlight_pageC.xs_two_col.yui3-g
+%div#spotlight_pageC.show_pageC.xs_two_col.yui3-g
   %div#left_col.yui3-u-33-48
     = render :partial => "spotlights/show/spotlight", :object => @spotlight
     %hr
