--- a/public/stylesheets/sass/guides.scss
+++ b/public/stylesheets/sass/guides.scss
@@ -15,6 +15,7 @@
     height : 110px;
 }
 hr#top_of_content.space { margin-top : -22px; }
+#guide_showC .seller_signup_boxC { margin-top : -31px; }
 
 
 /* guide single view */
