--- a/public/stylesheets/sass/reasons.scss
+++ b/public/stylesheets/sass/reasons.scss
@@ -10,6 +10,7 @@
     height : 100px;
 }
 hr#top_of_content.space { margin-top : -6px; }
+#show_pageC .seller_signup_boxC { margin-top : -31px; }
 
 @import "jquery.slider";
 @import "email_this_image";
