--- a/public/stylesheets/sass/spotlight.scss
+++ b/public/stylesheets/sass/spotlight.scss
@@ -20,6 +20,7 @@
 }
 
 /* Start Page Elements */
+.show_pageC .seller_signup_boxC { margin-top : -31px; }
 
 div#spotlight_pageC hr {
     margin : 1.5em 0;
