--- a/public/stylesheets/homeoffer3.css
+++ b/public/stylesheets/homeoffer3.css
@@ -1,61 +1,1 @@
-div#mainC div#content {
-  padding: 10px 30px; }
-
-#discountsC h1 {
-  padding: 20px 0 50px 0;
-  font-size: 2em;
-  text-align: center; }
-
-#discountsC h1, #discountsC a {
-  letter-spacing: 0;
-  word-spacing: 0; }
-
-.discount {
-  background: url(/images/sprites/discounts.png) no-repeat scroll 0px 500px transparent; }
-
-#uhaul_icon {
-  background-position: -164px -54px;
-  height: 73px;
-  width: 76px;
-  padding-bottom: 5px; }
-
-#public_storage_icon {
-  background-position: -81px -54px;
-  height: 73px;
-  width: 76px;
-  padding-bottom: 5px; }
-
-#american_finance_icon {
-  background-position: 0px -54px;
-  height: 73px;
-  width: 76px;
-  padding-bottom: 5px; }
-
-#send_me_discounts {
-  background-position: 0px 0px;
-  height: 53px;
-  width: 224px; }
-
-/* END Sprites */
-#thanksC {
-  padding-top: 21px;
-  padding-bottom: 10px; }
-
-div#discountsC h4 {
-  font-size: .95em;
-  font-weight: bold;
-  padding-bottom: 5px; }
-
-div#discountsC p {
-  font-size: .8em;
-  padding-right: 5px; }
-
-#buttonC {
-  text-align: center;
-  height: 53px;
-  line-height: 53px; }
-
-#buttonC a {
-  vertical-align: top;
-  padding-left: 15px;
-  font-size: .9em; }
+div#mainC div#content{padding:10px 30px}#step_three_title{background:url(/images/sprites/seller-register-step3.png) no-repeat scroll 0px 0px transparent;height:75px;width:592px;margin-left:16px}#affiliatesC{margin:40px auto 0;text-align:center}#affiliatesC img{maring:0 5px}#affiliatesC a{font-size:.9em}
