--- a/app/views/seller_listings/homeoffer2.haml
+++ b/app/views/seller_listings/homeoffer2.haml
@@ -8,3 +8,31 @@
 
       %div#form_gutter
         = render :partial => 'seller_listings/homeoffer2'
+
+-# https://ehouseoffers.fogbugz.com/default.asp?31
+- if Rails.env.production?
+  :plain
+    /* AdWords Tracking Code */
+    <script type="text/javascript">
+    /* <![CDATA[ */
+    var google_conversion_id = 1019442295;
+    var google_conversion_language = "en";
+    var google_conversion_format = "1";
+    var google_conversion_color = "ffffff";
+    var google_conversion_label = "ChwSCLXIxwEQ9-iN5gM";
+    var google_conversion_value = 0;
+    if ($69) {
+      google_conversion_value = $20;
+    }
+    /* ]]> */
+    </script>
+    <script type="text/javascript" src="http://www.googleadservices.com/pagead/conversion.js">
+    </script>
+    <noscript>
+    <div style="display:inline;">
+    <img height="1" width="1" style="border-style:none;" alt="" src="http://www.googleadservices.com/pagead/conversion/1019442295/?value=$69&amp;label=ChwSCLXIxwEQ9-iN5gM&amp;guid=ON&amp;script=0"/>
+    </div>
+    </noscript>
+
+    /* Bing PPC Tracking Code */
+    <script type="text/javascript">if (!window.mstag) mstag = {loadTag : function(){},time : (new Date()).getTime()};</script> <script id="mstag_tops" type="text/javascript" src="//flex.atdmt.com/mstag/site/e29ce228-c9b2-4fb3-b412-e36ce70c76a8/mstag.js"></script> <script type="text/javascript"> mstag.loadTag("conversion", {cp:"5050",dedup:"1"})</script> <noscript> <iframe src="//flex.atdmt.com/mstag/tag/e29ce228-c9b2-4fb3-b412-e36ce70c76a8/conversion.html?cp=5050&dedup=1" frameborder="0" scrolling="no" width="1" height="1" style="visibility:hidden; display:none"> </iframe> </noscript>
