Fixed annoying issue in IE resulting from all the li's being floated (clearfix)

--- a/app/views/shared/_boxed_resource_list.haml
+++ b/app/views/shared/_boxed_resource_list.haml
@@ -17,4 +17,5 @@
             - else
               = link_to item.title, send("#{item.class.name.downcase}_path", item.title_for_url)
           - if idx%3==2
-            %br.clear
+            %div.clearfix &nbsp;
+      %div.clearfix &nbsp;
