changed all new_seller_listing_paths (/home-offer/new) to new_home_offer_path (/home-offer-1)

--- a/app/views/layouts/application/_footer.haml
+++ b/app/views/layouts/application/_footer.haml
@@ -59,4 +59,4 @@
       Get a Home Offer from a Qualified Local Buyer
       
     - offer_btn = image_tag '/images/transparent.gif', :id => 'get_home_offer', :class => 'app_sprite', :alt => 'Get a Home Offer!'
-    = link_to offer_btn, new_seller_listing_path
+    = link_to offer_btn, new_home_offer_path
