--- a/app/views/seller_listings/index.html.haml
+++ b/app/views/seller_listings/index.html.haml
@@ -60,6 +60,6 @@
 
 %br
 
-= link_to 'New Seller listing', new_seller_listing_path
+= link_to 'New Seller listing', new_home_offer_path
 \|
 = link_to "Admin Panel", admin_path
